Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,20 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 84554}"
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 84554} "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Remember to press shift + enter to run the code."
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 84554"
    ]
   },
   {
@@ -84,8 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_population = None # change None\n",
-    "greenville_population # 84554"
+    "greenville_population = 84554 # change None"
    ]
   },
   {
@@ -97,13 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "area = None\n",
+    "area = 68\n",
     "area # 68"
    ]
   },
@@ -116,13 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Area', 'City', 'Country', 'Population']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_keys = None\n",
+    "city_keys = ['Area', 'City', 'Country', 'Population']\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
@@ -135,13 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[68, 'Greenville', 'USA', 84554]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_values = None\n",
+    "city_values = [68, 'Greenville', 'USA', 84554]\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
@@ -175,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
     "file_name = './cities.xlsx'\n",
     "travel_df = pandas.read_excel(file_name)\n",
-    "cities = travel_df.to_dict('records')"
+    "cities = travel_df.to_dict('records') "
    ]
   },
   {
@@ -274,15 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salina = None \n",
-    "salina\n",
-    "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
+    "salina = {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000} \n",
+    "salina # {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000} "
    ]
   },
   {
@@ -294,13 +326,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287651"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = 287651\n",
     "los_cabos_pop # 287651"
    ]
   },
@@ -313,14 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_count = None\n",
+    "city_count = 12\n",
     "city_count # 12"
    ]
   },
@@ -333,13 +384,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-82461386abc9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'City'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'PyeongChang'\u001b[0m   \u001b[0;31m# 'PyeongChang'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
-    "cities[11]['City'] # 'PyeongChang'"
+    "cities[11]['City'] = 'PyeongChang'   # 'PyeongChang'"
    ]
   },
   {
@@ -351,22 +412,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NoneType"
+       "list"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = None\n",
+    "pyeongchang_values = ['PyeongChang', 'South Korea', 2581000, 3194] \n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
@@ -381,22 +442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NoneType"
+       "list"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = ['City', 'Country', 'Population', 'Area'] \n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
@@ -436,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
